--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@ title: Robin2's Blog
 ---
 
 <div id="home">
-  <h1>Blog Posts</h1>
+  <h1>目录列表</h1>
   <ul class="posts">
-    {% for post in site.posts %}
-      <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
-    {% endfor %}
+    {% for category in site.categories %}
+		<li><a href="/{{ category | first }}.html">{{ category | first }}({{ category | last | size }})</a></li>
+	{% endfor %}
   </ul>
 </div>
