update posts categories

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ title: AgileJzl's Blog
       {% for post in category.last %}
         <ul>
           <li>
-            <span>{{ post.date | date_to_string }}</span> &raquo; 
+            <span>{{ post.date | date: "%Y-%m-%d" }}</span> &raquo; 
             <a href="{{ post.url }}">
               {{ post.title }}
             </a>
