--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@ title: Teddy's Blog
   <h3>目录列表</h3>
   <ul class="posts">
   {% for category in site.categories %}
-    {% assign cname = category | first | tags | capitalize %}
-    {% unless cname == 'Newest' %}
+    {% assign cname = category | first | tags %}
+    {% unless cname == 'newest' or cname == 'posts' %}
       <li>
-        <a href="/{{ category | first }}.html">
-          {{ cname }}({{ category | last | size }})
+        <a href="categories/{{ category | first }}.html">
+          {{ cname | capitalize }}({{ category | last | size }})
         </a>
       </li>
       
