add category rails

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ title: Teddy's Blog
 <script type="text/javascript">
   $(function(){
     // define category list order
-    var cnames = ['ruby', 'algorithm', 'frontend', 'java', 'other'];
+    var cnames = ['ruby', 'rails', 'algorithm', 'frontend', 'java', 'other'];
     _.each(cnames, function(name){
       $('.posts.main>li.' + name).appendTo($('.posts.sorted'));
     });
