--- a/examples/multi_brushes/index.html
+++ b/examples/multi_brushes/index.html
@@ -161,28 +161,30 @@
           });
 
           _.eachSlice(points.LinePoints, slice_size, function(slice_points, slice_index) {
-            setTimeout(function(){
+            setTimeout(function() {
               _.each(slice_points, function(point, index) {
                 point.Size = Math.round(point.Size);
                 var image1 = images[brush_index][0][point.TextureIndex];
                 var offset_x = point.Position[0] - __canvas_0.width / 2;
                 var offset_y = point.Position[1] - y - __canvas_0.height / 2;
 
-                saveContext(__ctx2);
-
-                __ctx2.drawImage(__ctx_1.canvas, 0, 0);
-                __ctx2.globalCompositeOperation = "destination-in";
-
+                if (index === 0) {
+                  saveContext(__ctx2);
+                }
                 __drawLinePoint(image1, ctx, point, y);
                 __ctx2.drawImage(ctx.canvas, 0, 0, __canvas_0.width, __canvas_0.height, point.Position[0] - __canvas_0.width/2, point.Position[1] - y - __canvas_0.height/2, __canvas_0.width, __canvas_0.height);
 
-                __ctx3.drawImage(__ctx2.canvas, 0, 0);
+                if (index === slice_points.length-1) {
+                  __ctx2.globalCompositeOperation = "source-in";
+                  __ctx2.drawImage(__ctx_1.canvas, 0, 0);
 
-                restoreContext(__ctx2);
+                  __ctx3.drawImage(__ctx2.canvas, 0, 0);
+                  restoreContext(__ctx2);
 
-                if (slice_index + slice_size >= points.LinePoints.length && index === slice_points.length-1 && line_index < max_line_index) {
-                  line_index += 1;
-                  iteraDrawLine(line_index);
+                  if (slice_index + slice_size >= points.LinePoints.length && line_index < max_line_index) {
+                    line_index += 1;
+                    iteraDrawLine(line_index);
+                  }
                 }
               });
             }, 2*(slice_index%slice_size));
@@ -190,7 +192,7 @@
           
         } else {
           _.eachSlice(points.LinePoints, slice_size, function(slice_points, slice_index) {
-            setTimeout(function(){
+            setTimeout(function() {
               _.each(slice_points, function(point, index) {
                 point.Size = Math.round(point.Size);
                 var image1 = images[brush_index][0][point.TextureIndex];
@@ -225,7 +227,7 @@
       // the entrance
       function drawMultiLines() {
         // datas = _.select(datas, function(data){return data.UseSubLine});
-        slice_size = 5;
+        slice_size = 15;
         line_index = 0;
         max_line_index = datas.length - 1;
         iteraDrawLine(line_index);
