Added an example load_from_file

--- a/examples/multi_brushes/index.html
+++ b/examples/multi_brushes/index.html
@@ -37,6 +37,7 @@
   <canvas id="__canvas2" width="470" height="780" class="canvas_block hidden">
     您的浏览器不支持canvas！
   </canvas>
+  <img src="original_image.png">
   <script type="text/javascript">
   $(function() {
     var __canvas_0 = document.getElementById('__canvas_0');
