--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
-
-Try redraw <a href="examples/multi_brushes/index.html">Multi Brushes</a>
-
-<div>
-  <img src="examples/multi_brushes/original_image.png" width="480" height="640">
-</div>
+<h2>Canvase Example</h2>
+Try <a href="examples/load_from_file/index.html">load from data file</a>
+<br/>
+<br/>
+Or <a href="examples/multi_brushes/index.html">load simple example</a>
