--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
-<h2>Canvase Example</h2>
-Try <a href="examples/load_from_file/index.html">load from data file</a>
+<title>Vivid Art</title>
+
+请 <a href="examples/load_from_file/index.html">选择动画文件</a>
 <br/>
 <br/>
-Or <a href="examples/multi_brushes/index.html">load simple example</a>
+或 <a href="examples/multi_brushes/index.html">查看简单动画</a>
