--- a/examples/load_from_file/index.html
+++ b/examples/load_from_file/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Canvas Example</title>
+  <title>Vivid Art</title>
   <style type="text/css">
   .canvas {
     border: 1px solid;
@@ -18,14 +18,11 @@
 
 <body>
   <div id="page-wrapper">
-
-    <h2>Canvase Example</h2>
     <div>
-      Select a json text file: 
+      选择动画文件：
       <input type="file" id="fileInput">
     </div>
     <pre id="fileDisplayArea"><pre>
-
   </div>
 
   <!-- tmp drawed point -->
@@ -64,15 +61,15 @@
           var reader = new FileReader();
 
           reader.onloadstart = function(e){
-            fileDisplayArea.innerText = "Please wait, loading...";
+            fileDisplayArea.innerText = "正在加载中，请等待...";
           }
 
           reader.onload = function(e) {
-            fileDisplayArea.innerText = "Loaded.";
+            fileDisplayArea.innerText = "已经加载完成。";
             try {
               datas = JSON.parse(reader.result);
+              console.log("Total " + datas.length + " lines");
               drawMultiLines();
-              console.log(datas.length);
             } catch (error) {
               fileDisplayArea.innerText = error;
             }
@@ -80,7 +77,7 @@
 
           reader.readAsText(file);
         } else {
-          fileDisplayArea.innerText = "File not supported!"
+          fileDisplayArea.innerText = "不支持该文件类型！"
         }
       });
     }
@@ -272,7 +269,7 @@
         saveContext(__ctx2);
         saveContext(__ctx3);
         y = 0;
-        slice_size = 15;
+        slice_size = 40;
         line_index = 0;
         max_line_index = datas.length - 1;
         iteraDrawLine(line_index);
