--- a/examples/multi_brushes/index.html
+++ b/examples/multi_brushes/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Canvas Example</title>
+  <title>Vivid Art</title>
   <style type="text/css">
   .canvas {
     border: 1px solid;
@@ -223,7 +223,7 @@
         saveContext(__ctx2);
         saveContext(__ctx3);
         y = 0;
-        slice_size = 15;
+        slice_size = 25;
         line_index = 0;
         max_line_index = datas.length - 1;
         iteraDrawLine(line_index);
