--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
-<title>Vivid Art</title>
+<!DOCTYPE html>
+<html>
 
-请 <a href="examples/load_from_file/index.html">选择动画文件</a>
-<br/>
-<br/>
-或 <a href="examples/multi_brushes/index.html">查看简单动画</a>
+<head>
+  <title>Vivid Art</title>
+  <meta content="text/html; charset=utf-8" http-equiv="content-type">
+</head>
+
+<body>
+  请 <a href="examples/load_from_file/index.html">选择动画文件</a>
+  <br/>
+  <br/> 或 <a href="examples/multi_brushes/index.html">查看简单动画</a>
+</body>
+
+</html>
