--- a/examples/multi_brushes/index.html
+++ b/examples/multi_brushes/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <title>Vivid Art</title>
+  <meta content="text/html; charset=utf-8" http-equiv="content-type">
   <style type="text/css">
   .canvas {
     border: 1px solid;
