--- a/examples/multi_brushes/index.html
+++ b/examples/multi_brushes/index.html
@@ -167,9 +167,13 @@
                 __ctx3.drawImage(__ctx2.canvas, 0, 0);
                 restoreContext(__ctx2);
 
-                if (slice_index + slice_size >= points.LinePoints.length && line_index < max_line_index) {
-                  line_index += 1;
-                  iteraDrawLine(line_index);
+                if (slice_index + slice_size >= points.LinePoints.length) {
+                  if (line_index < max_line_index) {
+                    line_index += 1;
+                    iteraDrawLine(line_index);
+                  } else {
+                    console.log("Done");
+                  }
                 }
               }
             });
@@ -201,12 +205,13 @@
       }
 
       function iteraDrawLine(index) {
-        console.log("Drawing line " + index);
-        line_data = datas[index]
+        line_data = datas[index];
         if (line_data.LinePoints.length === 0 && index < max_line_index) {
           console.log("Empty line " + index);
           line_index = index + 1;
           iteraDrawLine(line_index);
+        } else {
+          console.log("Drawing line " + index);
         }
         saveContext(__ctx_1);
         saveContext(__ctx1);
