--- a/examples/load_from_file/index.html
+++ b/examples/load_from_file/index.html
@@ -20,6 +20,9 @@
 <body>
   <div id="page-wrapper">
     <div>
+      播放速度: <input type="text" id="slice_size" value="20"></input>
+    </div>
+    <div>
       选择动画文件：
       <input type="file" id="fileInput">
     </div>
@@ -66,7 +69,7 @@
           }
 
           reader.onload = function(e) {
-            fileDisplayArea.innerText = "已经加载完成。";
+            fileDisplayArea.innerText = file.name + " 已经加载完成。";
             try {
               datas = JSON.parse(reader.result);
               console.log("Total " + datas.length + " lines");
@@ -74,6 +77,7 @@
             } catch (error) {
               fileDisplayArea.innerText = error;
             }
+            fileInput.value = "";
           }
 
           reader.readAsText(file);
@@ -275,9 +279,14 @@
         saveContext(__ctx1);
         saveContext(__ctx2);
         saveContext(__ctx3);
+
         y = 0;
-        slice_size = 40;
         line_index = 0;
+        slice_size = ~~$('#slice_size').val();
+        if (slice_size <= 0) {
+          slice_size = 20;
+          $('#slice_size').val(slice_size);
+        }
         max_line_index = datas.length - 1;
         iteraDrawLine(line_index);
       }
